--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Blockeys/opium-contracts-prep#readme",
   "dependencies": {
     "erc721o": "git+https://github.com/OpiumProtocol/erc721o.git#921f283",
+    "eth-gas-reporter": "^0.2.12",
     "openzeppelin-solidity": "^2.4.0",
     "solidity-docgen": "^0.3.13",
     "truffle": "^5.1.0"
