--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Blockeys/opium-contracts-prep#readme",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.0.29",
     "erc721o": "git+https://github.com/OpiumProtocol/erc721o.git#60723b7",
     "eth-gas-reporter": "^0.2.12",
     "openzeppelin-solidity": "^2.4.0",
