Different environments + deposit - tx - ticker bindings

--- a/thegraph/package.json
+++ b/thegraph/package.json
@@ -2,9 +2,13 @@
   "name": "opium-network",
   "license": "UNLICENSED",
   "scripts": {
-    "codegen": "graph codegen",
+    "prepare": "cat ./config/${NETWORK:-mainnet}.json | mustache  - subgraph.template.yaml > subgraph.yaml",
+    "codegen": "npm run prepare && graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ opiumprotocol/opium-network",
+    "deploy-remote": "npm run prepare && graph deploy opiumprotocol/${NAME:-opium-network} --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/",
+    "deploy-mainnet": "NETWORK=mainnet NAME=opium-network npm run deploy-remote",
+    "deploy-rinkeby": "NETWORK=rinkeby NAME=opium-network-rinkeby npm run deploy-remote",
+
     "create-local": "graph create --node http://localhost:8020/ opiumprotocol/opium-network",
     "remove-local": "graph remove --node http://localhost:8020/ opiumprotocol/opium-network",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 opiumprotocol/opium-network"
@@ -12,5 +16,8 @@
   "dependencies": {
     "@graphprotocol/graph-cli": "0.17.1",
     "@graphprotocol/graph-ts": "0.17.0"
+  },
+  "devDependencies": {
+    "mustache": "^4.0.1"
   }
 }
